# van-rust-meetup

./: .gitignore  README.md
benchmark/: summary.md
benchmark/example/: Cargo.toml
benchmark/example/benches/: data.rs  random.rs  sequential_vs_random_access.rs  vec_vs_matrix.rs
benchmark/example/src/: lib.rs
ffi/: intro.md  intro1.md
ffi/basic/: Cargo.toml  Makefile
ffi/basic/src/: lib.rs  main.c
macro/: declarative_macros.md
ownership/: ownership101.md
simd/: intro.md
trait/: closure.md  iterator.md
type_system/: subtyping.md
